# k8s-rag

./: .gitignore  1. Build a RAG API with FastAPI.html  2. Containerize a RAG API with Docker.html  3. NextWork - Deploy a RAG API to Kubernetes.html  4. Automate Testing with GitHub Actions.html  Dockerfile  README.md  app.py  deployment.yaml  docker-compose.yml  env_example.txt  main.py  ollama-deployment.yaml  pyproject.toml  semantic_test.py
.github/workflows/: ci.yml
1. Build a RAG API with FastAPI_files/: asset-e0e34712.css
2. Containerize a RAG API with Docker_files/: asset-3af01664.css
4. Automate Testing with GitHub Actions_files/: asset-ba8e4edd.css
Build a RAG API with FastAPI_files/: asset-b4a084bf.css  entry-609d9483.js  entry-e4fb6234.css
db/: chroma.sqlite3
inputs/: k8s.txt
scripts/: app.py  embed.py
