[project]
name = "k8s-rag"
version = "0.1.0"
description = "A Project that demonstrates functions of Kubernetes and AI RAG using Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
